Make buck builder source compatible with Java 8
Summary:
Java 11 has a TLS 1.3 bug that impacts python wheel downloading code buck project builder. Since Java 8 defaults to TLS 1.2, it will not be a problem anymore.
This commits replaces new standard library functions beyond Java 8 with java 8 compatible functions.

Reviewed By: sinancepel

Differential Revision: D15863895

fbshipit-source-id: 9a985559f25b2d9b8dea8e07cf09a5e0c1eddff1